# random-neural-net-models

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  run-notebooks.yml  test.yml
nbs/: attention.ipynb  backpropagation_rumelhart1986.ipynb  cnn_autoencoder_fastai2022.ipynb  cnn_autoencoder_fastai2022_fashion.ipynb  cnn_variational_autoencoder_fastai2022.ipynb  convolution_lecun1990.ipynb  dense_variational_autoencoder_fastai2022.ipynb  diffusion_fastai2022.ipynb  diffusion_fastai2022_learner.ipynb  diffusion_fastai2022_learner_with_attention.ipynb  language-model.ipynb  learner-example.ipynb  mingpt.ipynb  mingpt_adder.ipynb  mingpt_char.ipynb  mingpt_chargpt.ipynb  mingpt_gelu.ipynb  mingpt_sort.ipynb  perceptron.ipynb  resnet_fastai2022.ipynb  stochastic_optimization_methods.ipynb  tabular-fastai-classification-with-missingness-and-categories.ipynb  tabular-fastai-classification-with-missingness.ipynb  tabular-fastai-classification.ipynb  tabular-fastai-regression-with-missingness-and-categories.ipynb  tabular-fastai-regression-with-missingness.ipynb  tabular-fastai-regression.ipynb  tokenization.ipynb  unet-isbi2012.ipynb  unet_fastai2022.ipynb
nbs/core/: backpropagation-rumelhart1986.ipynb  convolution-lecun1990.ipynb  perceptron.ipynb  tabular-classification.ipynb  tabular-regression.ipynb
nbs/tabular/: reusing-vae-for-classification.ipynb  (+7 more)
requirements/: core.in  core.txt  dev.in  dev.txt  publish.txt  test.txt
tests/: test_backprop_rumelhart.py  test_learner.py
(+47 files in other folders)
