[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "random-neural-net-models"
requires-python = ">=3.10"

version = "0.0.0"
authors = [
    {name = "eschmidt42", email="11818904+eschmidt42@users.noreply.github.com"}
]
description = "My implementation of a random selection of artificial neural net based models."
dependencies = [
    "jupyterlab",
    "pytest",
    "black",
    "isort",
    "pre-commit",
    "jupyter-contrib-nbextensions",
    "ipywidgets",
    "pandas",
    "pydantic",
    "torch",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "rich",
    "tqdm"
]

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
line_length = 80
include_trailing_comma = true
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["random_neural_net_models"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.pytest.ini_options]
pythonpath = ["src/random_neural_net_models"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
markers = [
    "slow" # mark test as slow
]
